test/tests/stages/5_local_variables/valid/unused_exp.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[14]:
  int
  identifier(main)
  (
  void
  )
  {
  const int(2)
  +
  const int(2)
  ;
  return
  const int(0)
  ;
  }
