test/tests/stages/5_local_variables/invalid_parse/extra_credit/increment_declaration.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[14]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  ++
  ;
  return
  const int(0)
  ;
  }
